--- a/TODO
+++ b/TODO
@@ -1,9 +1,10 @@
 Fix GC generations
 Fix bytecode sizes (8bit for opcode and 16bit for argument)
+Implement modules
 Redesign constants allocation (numbers, strings, constant lists and vectors, etc..)
 Store symbols as module string constants but maintaine symbol table per-thread
 Port syntax-case
-Decide how to store modules with macros
 Compiler should decide where to allocate closures
+Decide how to store modules with macros
 Allocate really big ojects from mark'n'sweep heap
 Add train algorithm to GC
