Fixed cps-conversion of null
Added some functions to base

--- a/TODO
+++ b/TODO
@@ -3,6 +3,7 @@ Fix bytecode sizes (8bit for opcode and 16bit for argument)
 Implement modules
 Redesign constants allocation (numbers, strings, constant lists and vectors, etc..)
 Store symbols as module string constants but maintaine symbol table per-thread
+Optimize lists: each pair shoud store list flag and size
 Port syntax-case
 Compiler should decide where to allocate closures
 Decide how to store modules with macros
