--- a/README
+++ b/README
@@ -1,21 +1,5 @@
-Education experiment on implementing scheme vm and compiler.
-
-Source structure:
-
-scheme - scheme sources
-scheme/sc - compiler itself
-vm - vm sources
-
-At this moment, you need a external scheme implementation to run the compiler,
-I prefer ypsilon, but you can use any r6rs implementation after rewriting some
-ypsilon-dependent code (I will do it in the future).
-
-So if you want to play with lgears:
-run `make' to build VM
-from scheme/ run `./main.scm test.scm' (need ypsilon)
-You will see a lot of debug info and compilation stage dumps.
-compiler will create files:
-	compiled/test.scm.o - bytecode
-	compiled/test.scm.dbg - debug symbols
-
-To execute bytecode run: `../vm/vm compiled/test.scm.o'
+The project is temporary suspended but may be reanimated in future
+with the following goals:
+* Stack instead of CPS
+* Register-based VM (actualy, a LUA-like)
+* A thin core with r6rs system built on it
